--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
     border: 2px solid #fe7171;
     border-radius: 40px;
     width: 300px;
-    
+    font-size: 14px;
     }
     
     a{
@@ -115,7 +115,7 @@
         border: 2px solid #fe7171;
         border-radius: 40px;
         width: 300px;
-    
+        font-size: 14px;
     }
     
     li{
@@ -153,7 +153,7 @@
         font-size:16px;
         font-weight: 400;
     
-        width:350px;
+        width:250px;
         height:600px;
 
         margin-left: auto;
@@ -235,8 +235,8 @@
     margin-bottom: 20px;
     border: 2px solid #fe7171;
     border-radius: 40px;
-    width: 300px;
-    
+    width: 200px;
+    font-size: 14px;
     }
     
     a{
@@ -250,7 +250,8 @@
         margin-bottom: 20px;
         border: 2px solid #fe7171;
         border-radius: 40px;
-        width: 300px;
+        width: 200px;
+        font-size: 14px;
     
     }
     
@@ -261,6 +262,7 @@
     
     .links{
       font-weight: 700;
+      
       color:hsl(227, 10%, 46%);
       margin-bottom: 10px;
     }
